test/cases/parser/FieldProj.errors
FieldProj.b:5:20: Syntax error (expected name)
